tests/e2e/ice950.error
Error: syntax error in story at line 2, column 12

2|        return {}
                 ^^

E0102: `Map[any,any]` can't be implicitly converted to expected return type `string`.
